src/test/compile-fail/issue-2995.rs
fn bad (p: *int) {
    let _q: &int = p as &int; //~ ERROR non-scalar cast
}